[package]
name = "test_queue"
version = "0.1.0"
edition = "2024"

[dependencies]
flume = "0.11.1"
rand = "0.9.0"
ringbuf = { version = "0.4.8", features = ["alloc", "std"] }
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
ringbuf-blocking = "0.1.0-rc.5"
crossbeam-channel = "0.5.14"
quote = "1"
syn = { version = "2.0.100", features = ["full"] }

[[bench]]
name = "demo"
harness = false

#[lib]
#proc-macro = true
